# ad-ml-devops

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  requirements-pipeline.txt
.github/workflows/: ci.yml  deploy-model.yml  train-pipeline.yml
bentoml/: autobid_service.py  bentofile.yaml  configuration.yaml  user_persona_service.py
docker/: Dockerfile.pipeline  Dockerfile.serving  Dockerfile.training
helm/ml-serving/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
helm/ml-serving/templates/: _helpers.tpl  canary.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
k8s/base/: gpu-node-pool.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  resource-quotas.yaml
k8s/monitoring/: alerting-rules.yaml  grafana-dashboards.yaml  prometheus-rules.yaml
k8s/overlays/production/: hpa-patch.yaml  kustomization.yaml  resource-patch.yaml
k8s/overlays/staging/: kustomization.yaml  resource-patch.yaml
monitoring/: alerting_config.yaml  data_drift_detector.py  model_monitor.py
pipelines/: __init__.py  autobid_pipeline.py  user_persona_pipeline.py
pipelines/components/: __init__.py  data_validation.py  evaluation.py  model_registry.py  notification.py  training.py
pipelines/configs/: autobid_pipeline.yaml  user_persona_pipeline.yaml
scripts/: deploy-model.sh  port-forward.sh  rollback-model.sh  run-pipeline.sh  setup-kubeflow.sh
tests/: __init__.py  test_bentoml_services.py  test_helm_charts.py  test_pipelines.py
